recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:11: error: ')' expected but '}' found.
	}
        ^